Bug 160390 - Hang on export of a specific document to HTML
Summary: Hang on export of a specific document to HTML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2024-03-27 10:43 UTC by Mike Kaganski
Modified: 2024-03-27 21:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A document that hangs on export to HTML (935 bytes, application/vnd.oasis.opendocument.text)
2024-03-27 10:43 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-03-27 10:43:25 UTC
Created attachment 193336 [details]
A document that hangs on export to HTML

After commit 6d797c83d9fb891b783de39646b42d34a895c81e (tdf160017: make sure to emit the closing tags in correct order, 2024-03-04), the bugdoc hangs on File->Save As->HTML Document (Writer).
Comment 1 Mike Kaganski 2024-03-27 11:03:00 UTC
https://gerrit.libreoffice.org/c/core/+/165390
Comment 2 Commit Notification 2024-03-27 16:07:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d9c778391796e91ea3da361bf3901000350c26dd

tdf#160390: make sure to forward the iterator

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-03-27 21:04:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/832fb1ab9abf94f4074e0cc20d846c1536931cf3

tdf#160390: make sure to forward the iterator

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.