sw/source/filter/html/htmlatr.cxx
@@ -1524,8 +1524,9 @@ void HTMLEndPosLst::SplitItem( const SfxPoolItem& rItem, sal_Int32 nStart,
 
         for (auto it = items.begin(); it != items.end();)
         {
-            HTMLStartEndPos* pTest = *it;
-            sal_Int32 nTestEnd = pTest->GetEnd();
+            auto itTest = it++; // forward early, allow 'continue', and keep a copy for 'erase'
+            HTMLStartEndPos* pTest = *itTest;
+            const sal_Int32 nTestEnd = pTest->GetEnd();
             if (nTestEnd <= nStart)
                 continue;
 
@@ -1533,28 +1534,25 @@ void HTMLEndPosLst::SplitItem( const SfxPoolItem& rItem, sal_Int32 nStart,
             const SfxPoolItem& rTestItem = pTest->GetItem();
 
             // only the corresponding OnTag attributes have to be considered
-            if (rTestItem.Which() == nWhich && HTML_ON_VALUE == GetHTMLItemState(rTestItem))
+            if (rTestItem.Which() != nWhich || HTML_ON_VALUE != GetHTMLItemState(rTestItem))
+                continue;
+
+            // if necessary, insert the second part of the split attribute
+            if (nTestEnd > nEnd)
+                InsertItem(rTestItem, nEnd, nTestEnd);
+
+            if (nTestStart >= nStart)
             {
-                // if necessary, insert the second part of the split
-                // attribute
-                if (nTestEnd > nEnd)
-                    InsertItem(pTest->GetItem(), nEnd, nTestEnd);
-
-                if (nTestStart >= nStart)
-                {
-                    // the Test item only starts after the new end of the
-                    // attribute. Therefore, it can be completely erased.
-                    it = items.erase(it);
-                    std::erase(m_aEndLst[pTest->GetEnd()], pTest);
-                    delete pTest;
-                    continue;
-                }
-
-                // the start of the new attribute corresponds to the new
-                // end of the attribute
-                FixSplittedItem(pTest, nStart);
+                // the Test item only starts after the new end of the
+                // attribute. Therefore, it can be completely erased.
+                it = items.erase(itTest);
+                std::erase(m_aEndLst[nTestEnd], pTest);
+                delete pTest;
+                continue;
             }
-            ++it;
+
+            // the start of the new attribute corresponds to the new end of the attribute
+            FixSplittedItem(pTest, nStart);
         }
     }
 }
